--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,7 @@ services:
     ports:
       - "5000:5000"
     environment:
-      - MONGO_URI=mongodb://mongo:27017/codesync
-    depends_on:
-      - mongo
+      - MONGO_URI=mongodb+srv://tharunkunamalla7_db_user:tharun701@cluster0.c1jxg0t.mongodb.net/?appName=Cluster0
     restart: always
 
   client:
@@ -37,26 +35,5 @@ services:
       - /tmp:exec,mode=777
     restart: always
 
-  mongo:
-    image: mongo:latest
-    container_name: codesync-mongo
-    ports:
-      - "27017:27017"
-    volumes:
-      - mongo-data:/data/db
-    restart: always
-
-  mongo-express:
-    image: mongo-express:latest
-    container_name: codesync-mongo-express
-    restart: always
-    ports:
-      - "8081:8081"
-    environment:
-      - ME_CONFIG_MONGODB_URL=mongodb://mongo:27017/codesync
-    depends_on:
-      - mongo
-
 volumes:
-  mongo-data:
   piston-data:
